--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,11 @@
     "@azure/ai-form-recognizer": "^5.0.0",
     "@azure/cosmos": "^4.0.0",
     "@azure/identity": "^3.3.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@markdoc/markdoc": "^0.3.4",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -38,6 +42,7 @@
     "next-themes": "^0.2.1",
     "openai": "^4.14.2",
     "postcss": "^8.4.31",
+    "puppeteer": "^22.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
