Promptリスト対応

--- a/src/.env.example
+++ b/src/.env.example
@@ -35,6 +35,10 @@ AZURE_COSMOSDB_KEY=
 AZURE_COSMOSDB_DB_NAME=chat
 AZURE_COSMOSDB_CONTAINER_NAME=history
 
+# Update your Cosmos DB_NAME and CONTAINER_NAME if you want to overwrite the default values # for Prompt
+AZURE_COSMOSDB_DB_NAME_PROMPT=prompt
+AZURE_COSMOSDB_CONTAINER_NAME_PROMPT=title
+
 # Azure cognitive search is used for chat over your data
 AZURE_SEARCH_API_KEY=
 AZURE_SEARCH_NAME=
