--- a/src/package.json
+++ b/src/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.14",
     "ai": "^2.2.20",
     "autoprefixer": "^10.4.16",
@@ -44,6 +45,7 @@
     "postcss": "^8.4.31",
     "puppeteer": "^22.11.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.0.0",
